Add: Complete the function of code-snippets.

--- a/public/index.html
+++ b/public/index.html
@@ -40,5 +40,13 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="%PUBLIC_URL%/phaser2.min.js"></script>
+    <script src="%PUBLIC_URL%/phaser2-joystick.js"></script>
+    <script src="%PUBLIC_URL%/ace/ace.js"></script>
+    <script src="%PUBLIC_URL%/ace/ext-language_tools.js"></script>
+    <script src="%PUBLIC_URL%/ace/wizschool-theme.js"></script>
+    <script src="%PUBLIC_URL%/ace/wizschool-theme-python.js"></script>
+    <script src="%PUBLIC_URL%/ace/wizschool-theme-light.js"></script>
+    <script src="%PUBLIC_URL%/game/colors.js"></script>
   </body>
 </html>
